# relational-structs

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/relational_structs/: __init__.py  common.py  object_centric_state.py  objects.py  options.py  pddl.py  spaces.py  state.py  structs.py  utils.py
tests/: test_action_costs.py  test_object_centric_state.py  test_objects.py  test_options.py  test_pddl.py  test_spaces.py  test_state.py  test_structs.py  test_utils.py
