[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "relational_structs"
version = "0.1.0"
description = "Data structures for relational state and action spaces in robot environments."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
   "matplotlib",
   "numpy",
   "tabulate",
]

[project.optional-dependencies]
develop = [
    "black",
    "docformatter",
    "isort",
    "mypy",
    "pylint>=2.14.5",
    "pytest-pylint>=0.18.0",
    "pytest>=7.2.2",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
relational_structs = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
py_version = 39
profile = "black"
multi_line_output = 2
skip_glob = ["venv/*"]
split_on_trailing_comma = true

[tool.mypy]
strict_equality = true
disallow_untyped_calls = true
warn_unreachable = true
exclude = ["venv/*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "tabulate.*",
]
ignore_missing_imports = true
